<resources>
    <string name="app_name">Minecraft Versions Viewer</string>
    <string name="activity_main_name">MCVV</string>
    <string name="tab_stable_releases_name">Stable Releases</string>
    <string name="tab_snapshot_preview_name">Snapshot Preview</string>
    <string name="tab_beta_name">Beta</string>
    <string name="tab_alpha_name">Alpha</string>
    <string name="activity_stable_releases_name">Stable Releases</string>
    <string name="activity_snapshot_preview_name">Snapshot Preview</string>
    <string name="activity_beta_name">Beta</string>
    <string name="activity_alpha_name">Alpha</string>
    <string name="menu_refresh_all_pages">Refresh All Pages</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="activity_settings_name">Settings</string>
    <string name="activity_about_name">About</string>
    <string name="dialog_wait_download_and_initialization_title">Wait</string>
    <string name="dialog_wait_download_and_initialization_message">Initializing... (if the loading time is too long, there may be network problems or application problems, you can restart the application)</string>
    <string name="dialog_exception_title">An error occurred</string>
    <string name="dialog_exception_message">Sorry, an error occurred in the program. We recommend that you report this problem to the author. The class file is: %1$s; the error is: %2$s</string>
    <string name="dialog_no_network_title">No Network</string>
    <string name="dialog_no_network_message">There is no network connection, please connect to the network and restart the application</string>
    <string name="dialog_no_network_button_exit">Exit</string>
    <string name="toast_press_again_exit_application">Press again to exit the application</string>
    <string name="text_layout_stable_releases_textview_comprehensive_name_number">Release Order</string>
    <string name="text_layout_stable_releases_textview_comprehensive_name_version_name">Version Name</string>
    <string name="text_layout_stable_releases_textview_comprehensive_name_release_date">Release Date</string>
    <string name="text_activity_snapshot_preview_textview_too_many_content_restart_tip">There are too many contents in this interface, you may need to re-enter the application to load again</string>
    <string name="text_layout_about_textview_version_partical">Version</string>
    <string name="text_layout_about_listview_users_can_do_item_contact">Contact %s</string>
    <string name="text_layout_about_listview_users_can_do_item_visit_github">Visit the GitHub repository of this application</string>
    <string name="text_layout_about_listview_users_can_do_item_visit_mcversions_com">Visit https://mcversions.net/</string>
    <string name="text_layout_about_listview_users_can_do_item_visit_msxw">Visit MSXW(%s\'s website)</string>
    <string name="text_layout_about_listview_users_can_do_item_visit_author_github">Visit %s\'s GitHub repository</string>
    <string name="text_layout_about_listview_users_can_do_item_special_thanks">Special thanks</string>
    <string name="text_layout_about_textview_copyrightForChinese"></string>
    <string name="text_layout_about_textview_copyright">Copyright © 2020 %s</string>
    <string name="text_layout_about_textview_author">%s is the author of this application.</string>
    <string name="dialog_special_thanks_title">Special Thanks</string>
    <string name="dialog_special_thanks_message">Special thanks to mcversions.net, because the Minecraft version of this application is from this website, please contact me if you find any errors</string>
    <string name="dialog_exit_title">Prompt</string>
    <string name="dialog_exit_message">Do you want to exit?</string>
    <string name="dialog_exit_button_exit">Exit</string>
    <string name="toast_please_check_your_network">Please check your network and try again</string>
    <string name="preference_settings_category_display_interface_title">Display Interface</string>
    <string name="preference_settings_list_modify_theme_title">Theme</string>
    <string name="preference_settings_list_modify_theme_dialogtitle">Select a theme</string>
    <string name="preference_settings_list_modify_language_title">Language</string>
    <string name="preference_settings_list_modify_language_dialogtitle">Select a language</string>
    <string name="preference_settings_category_general_title">General</string>
    <string name="preference_settings_list_launch_page_title">Launch page</string>
    <string name="preference_settings_list_launch_page_dialogtitle">Select a page</string>
    <string name="preference_settings_category_versions_sources_title">Versions Sources</string>
    <string name="preference_settings_lists_versions_source_dialogtitle">Select a source</string>
    <string name="preference_settings_list_stable_releases_versions_source_title">Stable releases versions source</string>
    <string name="preference_settings_edittexts_input_versions_source_hint">Input a URL or local file path (JSON file, format in GitHub)</string>
    <string name="preference_settings_edittext_input_stable_releases_versions_source_title">Custom stable releases versions source</string>
    <string name="preference_settings_edittext_input_stable_releases_versions_source_dialogtitle">Input a new stable releases versions source</string>
    <string name="preference_settings_list_snapshot_preview_versions_source_title">Snapshot preview versions source</string>
    <string name="preference_settings_edittext_input_snapshot_preview_versions_source_title">Custom snapshot preview versions source</string>
    <string name="preference_settings_edittext_input_snapshot_preview_versions_source_dialogtitle">Input a new snapshot preview versions source</string>
    <string name="preference_settings_list_beta_versions_source_title">Beta versions source</string>
    <string name="preference_settings_edittext_input_beta_versions_source_title">Custom beta versions source</string>
    <string name="preference_settings_edittext_input_beta_versions_source_dialogtitle">Input a new beta versions source</string>
    <string name="preference_settings_list_alpha_versions_source_title">Alpha versions source</string>
    <string name="preference_settings_edittext_input_alpha_versions_source_title">Custom alpha versions source</string>
    <string name="preference_settings_edittext_input_alpha_versions_source_dialogtitle">Input a new alpha versions source</string>
    <string name="dialog_exception_versions_source_url_invaild">Failed to download the JSON file of the versions source. The file may not exist.</string>
    <string name="dialog_exception_detail_title">An error occurred</string>
    <string name="dialog_exception_detail_message">Sorry, an error occurred in the program. We recommend that you report this problem to the author. The class file is: %1$s; the error is: %2$s (%3$s)</string>
    <string name="dialog_exception_getjsonfailed">JSON file parsing failed</string>
    <string name="dialog_exception_downloadfailed">File download failed</string>
    <string name="dialog_exception_initlistviewfailed">List initialization failed</string>
    <string name="dialog_exception_getjsonorinitlistviewfailed">Failed to parse JSON file or list initialization</string>
    <string name="dialog_versions_source_stable_releases_url_invaild_title">Please check your stable releases versions source</string>
    <string name="dialog_versions_source_stable_releases_url_invaild_message">The network file referred to by the stable releases versions source cannot be found</string>
    <string name="dialog_versions_source_snapshot_preview_url_invaild_title">Please check your snapshot preview versions source</string>
    <string name="dialog_versions_source_snapshot_preview_url_invaild_message">The network file referred to by the snapshot preview versions source cannot be found</string>
    <string name="dialog_versions_source_beta_url_invaild_title">Please check your beta versions source</string>
    <string name="dialog_versions_source_beta_url_invaild_message">The network file referred to by the beta versions source cannot be found</string>
    <string name="dialog_versions_source_alpha_url_invaild_title">Please check your alpha versions source</string>
    <string name="dialog_versions_source_alpha_url_invaild_message">The network file referred to by the alpha versions source cannot be found</string>
    <string name="dialog_versions_source_stable_releases_isnot_json_title">Please check your stable releases versions source</string>
    <string name="dialog_versions_source_stable_releases_isnot_url_title">Please check your stable releases versions source</string>
    <string name="dialog_versions_source_stable_releases_ismpty_title">Please check your stable releases versions source</string>
    <string name="dialog_versions_source_stable_releases_file_not_exist_title">Please check your stable releases versions source</string>
    <string name="dialog_versions_source_stable_releases_isempty_message">Stable releases versions source is empty, please enter a URL or local file path</string>
    <string name="dialog_versions_source_stable_releases_file_not_exist_message">The file referred to by stable releases versions source cannot be found</string>
    <string name="dialog_versions_source_stable_releases_isnot_json_message">The file referred to by stable releasesversions source is not a JSON file</string>
    <string name="dialog_versions_source_stable_releases_isnot_url_message">The URL referred to by stable releases versions source is not a URL</string>
    <string name="dialog_versions_source_snapshot_preview_isnot_json_title">Please check  your snapshot preview versions source</string>
    <string name="dialog_versions_source_snapshot_preview_isnot_url_title">Please check  your snapshot preview versions source</string>
    <string name="dialog_versions_source_snapshot_preview_ismpty_title">Please check  your snapshot preview versions source</string>
    <string name="dialog_versions_source_snapshot_preview_file_not_exist_title">Please check  your snapshot preview versions source</string>
    <string name="dialog_versions_source_snapshot_preview_isempty_message">Snapshot preview versions source is empty, please enter a URL or local file path</string>
    <string name="dialog_versions_source_snapshot_preview_file_not_exist_message">The file referred to by snapshot preview versions source cannot be found</string>
    <string name="dialog_versions_source_snapshot_preview_isnot_json_message">The file referred to by snapshot preview versions source is not a JSON file</string>
    <string name="dialog_versions_source_snapshot_preview_isnot_url_message">The URL referred to by snapshot preview versions source is not a URL</string>
    <string name="dialog_versions_source_beta_isnot_json_title">Please check  your beta versions source</string>
    <string name="dialog_versions_source_beta_isnot_url_title">Please check  your beta versions source</string>
    <string name="dialog_versions_source_beta_ismpty_title">Please check  your beta versions source</string>
    <string name="dialog_versions_source_beta_file_not_exist_title">Please check  your beta versions source</string>
    <string name="dialog_versions_source_beta_isempty_message">Beta versions source is empty, please enter a URL or local file path</string>
    <string name="dialog_versions_source_beta_file_not_exist_message">The file referred to by beta versions source cannot be found</string>
    <string name="dialog_versions_source_beta_isnot_json_message">The file referred to by beta versions source is not a JSON file</string>
    <string name="dialog_versions_source_beta_isnot_url_message">The URL referred to by beta versions source is not a URL</string>
</resources>