<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_weight="2"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/stable_releases_comprehensive_name_number"
        style="@android:style/TextAppearance.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="3"
        android:text="@string/text_layout_stable_releases_textview_comprehensive_name_number" />

    <TextView
        android:id="@+id/stable_releases_comprehensive_name_version_name"
        style="@android:style/TextAppearance.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/text_layout_stable_releases_textview_comprehensive_name_version_name" />

    <TextView
        android:id="@+id/stable_releases_comprehensive_name_release_date"
        style="@android:style/TextAppearance.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="3"
        android:text="@string/text_layout_stable_releases_textview_comprehensive_name_release_date" />

</LinearLayout>